--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -3,9 +3,9 @@
     <input type="text" class="form-control mr-2" placeholder="Digite aqui"
     [(ngModel)]= "filtroLista">
   </div>
-  <div class="form-group mb-2 col-auto">
+  <!-- <div class="form-group mb-2 col-auto">
     <button class="btn btn-outline-success">Buscar</button>
-  </div>
+  </div> -->
 </div>
 <!-- btn.btn.btn-outline-success{buscar} -->
 <!-- form>.form-group.mb-2>input.form-control.mr-2 -->
@@ -30,7 +30,7 @@
     </tr>
   </thead>
   <tbody *ngIf="eventos">
-    <tr *ngFor="let evento of eventos">
+    <tr *ngFor="let evento of eventosFiltrados">
       <td>
         <img *ngIf=mostrarImagem
         src="http://localhost:5000/img/{{evento.imagemURL}}"
