--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -89,3 +89,84 @@
   </div>
   <div class="modal-body">Edit your event here.</div>
 </ng-template>
+
+<form [formGroup]="registerForm">
+  <div class="form-group row">
+    <div class="form-group col-md-12">
+      <label>Tema</label>
+      <input
+        type="text"
+        class="form-control is-invalid"
+        formControlName="tema"
+      />
+      <div class="invalid-feedback">Tema obrigatório.</div>
+    </div>
+  </div>
+  <div class="form-group row">
+    <div class="form-group col-md-8">
+      <label>Local</label>
+      <input
+        type="text"
+        class="form-control is-invalid"
+        formControlName="local"
+      />
+      <div class="invalid-feedback">Local obrigatório.</div>
+    </div>
+    <div class="form-group col-md-4">
+      <label>Data e Hora</label>
+      <input
+        type="text"
+        class="form-control is-invalid"
+        formControlName="dataEvento"
+      />
+      <div class="invalid-feedback">Data obrigatória.</div>
+    </div>
+  </div>
+  <div class="form-group row">
+    <div class="form-group col-md-3">
+      <label>Qtd Pessoas</label>
+      <input
+        type="number"
+        class="form-control is-invalid"
+        formControlName="qtdPessoas"
+      />
+      <div class="invalid-feedback">Quantidade de pessoas obrigatório.</div>
+    </div>
+    <div class="form-group col-md-9">
+      <label>Imagem</label>
+      <input
+        type="text"
+        class="form-control is-invalid"
+        formControlName="imagemURL"
+      />
+      <div class="invalid-feedback">Imagem obrigatória.</div>
+    </div>
+  </div>
+  <div class="form-group row">
+    <div class="form-group col-md-4">
+      <label>Telefone</label>
+      <input
+        type="text"
+        class="form-control is-invalid"
+        formControlName="telefone"
+      />
+      <div class="invalid-feedback">Telefone obrigatório.</div>
+    </div>
+    <div class="form-group col-md-8">
+      <label>Email</label>
+      <input
+        type="text"
+        class="form-control is-invalid"
+        formControlName="email"
+      />
+      <div class="invalid-feedback">E-mail obrigatório.</div>
+    </div>
+  </div>
+</form>
+<br />
+<button class="btn btn-secondary" (click)="openModal(template)">Fechar</button>
+<button class="btn btn-primary" (click)="salvarAlteracao()">
+  Salvar Alterações
+</button>
+<br />
+<br />
