--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -1,35 +1,42 @@
-<div class="row">
-  <div class="form-group mb-2 col-auto">
-    <input
-      type="text"
-      class="form-control mr-2"
-      placeholder="Digite aqui"
-      [(ngModel)]="filtroLista"
-    />
+<div class="d-flex bd-highlight mb-3">
+  <div class="me-auto p-2 bd-highlight">
+    <div class="form-group mb-2">
+      <input
+        type="text"
+        class="form-control mr-2"
+        placeholder="Digite aqui"
+        [(ngModel)]="filtroLista"
+      />
+    </div>
   </div>
   <!-- <div class="form-group mb-2 col-auto">
     <button class="btn btn-outline-success">Buscar</button>
   </div> -->
-</div>
-<!-- btn.btn.btn-outline-success{buscar} -->
-<!-- form>.form-group.mb-2>input.form-control.mr-2 -->
 
+  <!-- btn.btn.btn-outline-success{buscar} -->
+  <!-- form>.form-group.mb-2>input.form-control.mr-2 -->
+  <div class="p-2 bd-highlight">
+    <button class="btn btn-outline-primary" (click)="novoEvento(template)">
+      <i class="fa fa-plus-circle"></i>&nbsp; Novo Evento
+    </button>
+  </div>
+</div>
 <h3>Filtro: {{ filtroLista }}</h3>
 <table class="table table-striped">
   <thead class="table-dark">
     <tr>
-      <td>
-        <button class="btn btn-secondary btn-sm" (click)="alternarImagem()">
-          Show image
+      <th>
+        <button class="btn btn-outline-primary" (click)="alternarImagem()">
+          <i class="{{ mostrarImagem ? 'fa fa-eye-slash' : 'fa fa-eye' }}"></i>
         </button>
-      </td>
-      <td>#</td>
-      <td>Tema</td>
-      <td>Local</td>
-      <td>Data</td>
-      <td>Qtd Pessoas</td>
-      <td>Lote</td>
-      <td>Opções</td>
+      </th>
+      <th>#</th>
+      <th>Tema</th>
+      <th>Local</th>
+      <th>Data</th>
+      <th>Qtd Pessoas</th>
+      <th>Lote</th>
+      <th colspan="2">Opções</th>
     </tr>
   </thead>
   <tbody *ngIf="eventos">
@@ -58,11 +65,15 @@
           <button
             class="btn btn-sm btn-success"
             tooltip="Editar"
-            (click)="editModal(evento.id, templateEdit)"
+            (click)="editarEvento(evento, template)"
           >
             <i class="fa fa-edit"></i>
           </button>
-          <button class="btn btn-sm btn-danger" tooltip="Excluir">
+          <button
+            class="btn btn-sm btn-danger"
+            tooltip="Excluir"
+            (click)="excluirEvento(evento, confirmExclusao)"
+          >
             <i class="fa fa-eraser"></i>
           </button>
         </div>
@@ -352,275 +363,42 @@
 
 <div
   bsModal
-  #templateEdit="bs-modal"
+  #confirmExclusao="bs-modal"
   class="modal fade"
   tabindex="-1"
   role="dialog"
   aria-labelledby="dialog-sizes-name1"
 >
-  <div class="modal-dialog modal-lg">
+  <div class="modal-dialog modal-sm">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 id="dialog-sizes-name1" class="modal-title pull-left">
-          Editar evento
-        </h4>
+        <h4 class="modal-title pull-left">Deletando Evento</h4>
         <button
           type="button"
-          class="btn-close close pull-right"
-          (click)="templateEdit.hide()"
+          class="close pull-right"
+          (click)="confirmExclusao.hide()"
           aria-label="Close"
         >
-          <span aria-hidden="true" class="visually-hidden">&times;</span>
+          <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <form [formGroup]="registerForm">
-          <div class="form-group row">
-            <div class="form-group col-md-12">
-              <label>Tema</label>
-              <input
-                type="text"
-                class="form-control"
-                formControlName="tema"
-                load="teste"
-                placeholder="Insira o Tema"
-                [ngClass]="{
-                  'is-invalid':
-                    registerForm.get('tema')!.errors &&
-                    registerForm.get('tema')!.touched
-                }"
-              />
-
-              <div
-                *ngIf="
-                  registerForm.get('tema')!.hasError('required') &&
-                  registerForm.get('tema')!.touched
-                "
-                class="invalid-feedback"
-              >
-                Tema obrigatório.
-              </div>
-              <div
-                *ngIf="
-                  registerForm.get('tema')!.hasError('minlength') &&
-                  registerForm.get('tema')!.touched
-                "
-                class="invalid-feedback"
-              >
-                Tema deve ter no mínimo 4 caracteres.
-              </div>
-              <div
-                *ngIf="
-                  registerForm.get('tema')!.hasError('maxlength') &&
-                  registerForm.get('tema')!.touched
-                "
-                class="invalid-feedback"
-              >
-                Tema deve ter no máximo 50 caracteres.
-              </div>
-            </div>
-          </div>
-          <br />
-          <div class="form-group row">
-            <div class="form-group col-md-8">
-              <label>Local</label>
-              <input
-                type="text"
-                class="form-control"
-                formControlName="local"
-                placeholder="Insira o Local"
-                [ngClass]="{
-                  'is-invalid':
-                    registerForm.get('local')!.errors &&
-                    registerForm.get('local')!.touched
-                }"
-              />
-              <div
-                *ngIf="
-                  registerForm.get('local')!.hasError('required') &&
-                  registerForm.get('local')!.touched
-                "
-                class="invalid-feedback"
-              >
-                Local obrigatório.
-              </div>
-              <div
-                *ngIf="
-                  registerForm.get('local')!.hasError('minlength') &&
-                  registerForm.get('local')!.touched
-                "
-                class="invalid-feedback"
-              >
-                Local deve conter no mínimo 4 caracteres.
-              </div>
-              <div
-                *ngIf="
-                  registerForm.get('local')!.hasError('maxlength') &&
-                  registerForm.get('local')!.touched
-                "
-                class="invalid-feedback"
-              >
-                Local deve ter no máximo 50 caracteres.
-              </div>
-            </div>
-            <div class="form-group col-md-4">
-              <label>Data e Hora</label>
-              <input
-                type="text"
-                class="form-control"
-                formControlName="dataEvento"
-                placeholder="Insira a Data e hora"
-                bsDatepicker
-                [bsConfig]="{ dateInputFormat: 'DD-MM-YYYY, hh:mm a' }"
-                [ngClass]="{
-                  'is-invalid':
-                    registerForm.get('dataEvento')!.errors &&
-                    registerForm.get('dataEvento')!.touched
-                }"
-              />
-              <div
-                *ngIf="
-                  registerForm.get('dataEvento')!.hasError('required') &&
-                  registerForm.get('dataEvento')!.touched
-                "
-                class="invalid-feedback"
-              >
-                Data obrigatória.
-              </div>
-            </div>
-          </div>
-          <br />
-          <div class="form-group row">
-            <div class="form-group col-md-3">
-              <label>Quantidade de Pessoas</label>
-              <input
-                type="number"
-                class="form-control"
-                formControlName="qtdPessoas"
-                placeholder="Insira a quantid."
-                [ngClass]="{
-                  'is-invalid':
-                    registerForm.get('qtdPessoas')!.errors &&
-                    registerForm.get('qtdPessoas')!.touched
-                }"
-              />
-              <div
-                *ngIf="
-                  registerForm.get('qtdPessoas')!.hasError('required') &&
-                  registerForm.get('qtdPessoas')!.touched
-                "
-                class="invalid-feedback"
-              >
-                Quantidade de pessoas obrigatório.
-              </div>
-              <div
-                *ngIf="
-                  registerForm.get('qtdPessoas')!.hasError('max') &&
-                  registerForm.get('qtdPessoas')!.touched
-                "
-                class="invalid-feedback"
-              >
-                Limite máximo de pessoas: 120.000.
-              </div>
-            </div>
-            <div class="form-group col-md-9">
-              <label>Imagem</label>
-              <input
-                type="text"
-                class="form-control"
-                formControlName="imagemURL"
-                placeholder="Insira a Imagem"
-              />
-            </div>
-          </div>
-          <br />
-          <div class="form-group row">
-            <div class="form-group col-md-4">
-              <label>Telefone</label>
-              <input
-                type="text"
-                class="form-control"
-                formControlName="telefone"
-                placeholder="Insira o Telefone"
-                [ngClass]="{
-                  'is-invalid':
-                    registerForm.get('telefone')!.errors &&
-                    registerForm.get('telefone')!.touched
-                }"
-              />
-              <div
-                *ngIf="
-                  registerForm.get('telefone')!.hasError('required') &&
-                  registerForm.get('telefone')!.touched
-                "
-                class="invalid-feedback"
-              >
-                Telefone obrigatório.
-              </div>
-              <div
-                *ngIf="
-                  registerForm.get('telefone')!.hasError('minlength') &&
-                  registerForm.get('telefone')!.touched
-                "
-                class="invalid-feedback"
-              >
-                Telefone deve conter no mínimo 10 dígitos.
-              </div>
-              <div
-                *ngIf="
-                  registerForm.get('telefone')!.hasError('maxlength') &&
-                  registerForm.get('telefone')!.touched
-                "
-                class="invalid-feedback"
-              >
-                Telefone deve conter no máximo 11 dígitos.
-              </div>
-            </div>
-            <div class="form-group col-md-8">
-              <label>Email</label>
-              <input
-                type="text"
-                class="form-control"
-                formControlName="email"
-                placeholder="Insira o e-mail"
-                [ngClass]="{
-                  'is-invalid':
-                    registerForm.get('email')!.errors &&
-                    registerForm.get('email')!.touched
-                }"
-              />
-              <div
-                *ngIf="
-                  registerForm.get('email')!.hasError('required') &&
-                  registerForm.get('email')!.touched
-                "
-                class="invalid-feedback"
-              >
-                E-mail obrigatório.
-              </div>
-              <div
-                *ngIf="
-                  registerForm.get('email')!.hasError('email') &&
-                  registerForm.get('email')!.touched
-                "
-                class="invalid-feedback"
-              >
-                E-mail em formato inválido.
-              </div>
-            </div>
-          </div>
-        </form>
+        <p>{{ bodyDeletarEvento }}</p>
       </div>
-      <div class="modal-footer justify-content-between">
-        <button class="btn btn-secondary" (click)="templateEdit.hide()">
-          Fechar
+      <div class="modal-footer btn-group d-flex">
+        <button
+          type="button"
+          class="btn btn-outline-primary"
+          (click)="confirmExclusao.hide()"
+        >
+          CENCELAR
         </button>
         <button
-          class="btn btn-primary"
-          [disabled]="!registerForm.valid"
-          (click)="salvarAlteracao(templateEdit)"
+          type="button"
+          class="btn btn-outline-danger"
+          (click)="confirmeDelete(template)"
         >
-          Salvar Alterações
+          DELETAR
         </button>
       </div>
     </div>
