--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -396,7 +396,7 @@
         <button
           type="button"
           class="btn btn-outline-danger"
-          (click)="confirmeDelete(template)"
+          (click)="confirmeDelete(confirmExclusao)"
         >
           DELETAR
         </button>
