--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -45,7 +45,7 @@
       <td>
         <img
           *ngIf="mostrarImagem"
-          src="http://localhost:5000/img/{{ evento.imagemURL }}"
+          src="http://localhost:5000/resources/images/{{ evento.imagemURL }}"
           [style.width.px]="imagemLargura"
           [style.margin.px]="imagemMargem"
         />
@@ -262,12 +262,26 @@
             </div>
             <div class="form-group col-md-9">
               <label>Imagem</label>
-              <input
-                type="text"
-                class="form-control"
-                formControlName="imagemURL"
-                placeholder="Insira a Imagem"
-              />
+              <table>
+                <tr>
+                  <td>
+                    <button class="btn btn-success" (click)="file.click()">
+                      Enviar Imagem
+                    </button>
+                  </td>
+                  <td>
+                    <input
+                      type="file"
+                      #file
+                      (change)="onFileChange($event)"
+                      class="form-control"
+                      formControlName="imagemURL"
+                      placeholder="Insira a Imagem"
+                      style="display: none"
+                    />
+                  </td>
+                </tr>
+              </table>
             </div>
           </div>
           <br />
