--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -45,7 +45,9 @@
       <td>
         <img
           *ngIf="mostrarImagem"
-          src="http://localhost:5000/resources/images/{{ evento.imagemURL }}"
+          src="http://localhost:5000/resources/images/{{
+            evento.imagemURL
+          }}?_ts={{ dataAtual }}"
           [style.width.px]="imagemLargura"
           [style.margin.px]="imagemMargem"
         />
